@@ -6,6 +6,9 @@
 	(display_event_cb): Just update the new field (N79304).
 	(blink_icon): Don't blink if display is blank (N79304).
 
+	* src/operations.cc (ip_check_upgrade_reply): Skip the cert
+	information of the reply only if not upgrading (N78908).
+
 2008-01-17  Mario Sanchez Prada  <msanchez@maemo.org>
 
 	Added a new APTCMD_DOWNLOAD_PACKAGE command, to allow downloading
